@@ -211,6 +211,10 @@ public:
 	void AssignToInstance(uint16 instance_id);
 	void AssignGroupToInstance(uint16 instance_id);
 	void AssignRaidToInstance(uint16 instance_id);
+	void RemoveFromInstance(uint16 instance_id);
+	//void RemoveGroupFromInstance(uint16 instance_id);	//potentially useful but not implmented at this time.
+	//void RemoveRaidFromInstance(uint16 instance_id);	//potentially useful but not implmented at this time.
+	void RemoveAllFromInstance(uint16 instance_id);
 	void MovePCInstance(int zone_id, int instance_id, float x, float y, float z, float heading);
 	void FlagInstanceByGroupLeader(uint32 zone, int16 version);
 	void FlagInstanceByRaidLeader(uint32 zone, int16 version);
